Make the input narrower and make the dropdown width fixed (too narrow when vertical scrollbar appears).

--- a/app/styles/ember-date-components/addon.scss
+++ b/app/styles/ember-date-components/addon.scss
@@ -227,7 +227,7 @@ $date-picker-color-background: #eee !default;
 .time-picker__wrapper {
   display: inline-block;
   position: relative;
-  width: 7em;
+  width: 6em;
 }
 
 .time-picker__input {
@@ -235,7 +235,7 @@ $date-picker-color-background: #eee !default;
 }
 
 .time-picker__dropdown {
-  width: 100%;
+  width: 4em;
   max-height: 300px;
   background: white;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
